rubocop/examples/good/Style_BlockComments.rb
# 'https://github.com/bbatsov/ruby-style-guide#no-block-comments'

# Don't use block comments.
# They cannot be preceded by whitespace and are not as easy to spot as regular comments

# good
# comment line
# another comment line
